# mx2dts

./: .gitignore  PLAN.md  README.md  app.py  pyproject.toml
.github/workflows/: dts-build.yml
ci/: build-and-verify-dts.sh
src/mx2dts/: __init__.py  cli.py  context.py  dma_db.py  dts_writer.py  ioc_parser.py  mcu_db.py  paths.py  pinctrl_db.py
src/mx2dts/converters/: __init__.py  adc.py  can.py  clocks.py  dcmi.py  dma.py  ethernet.py  gpio.py  i2c.py  i2s.py  qspi.py  rng_crc.py  rtc.py  sai.py  sdmmc.py  serial.py  spi.py  timers.py  usb.py  watchdog.py
tests/: conftest.py  test.ioc  test_converters_clocks.py  test_converters_dma.py  test_converters_gpio.py  test_converters_misc.py  test_converters_serial.py  test_converters_spi_i2c.py  test_dts_writer.py  test_integration_real_ioc.py  test_ioc_parser.py
